--- a/vignettes/expectedCases-intro.Rmd
+++ b/vignettes/expectedCases-intro.Rmd
@@ -22,15 +22,11 @@ library(ggplot2)
 
 ## Overview
 
-The **expectedCases** package estimates projected cancer incidence and mortality for a study cohort, given age-specific incidence and mortality rates.
-This vignette walks through a reproducible workflow with example data, explanations, and simple visualization.
+The **expectedCases** package projects expected cancer incidence and mortality for a cohort using age-specific rates. This vignette shows how to (1) prepare a 5-year age-band cohort, (2) supply sex-specific incidence and mortality, (3) run projections, and (4) interpret/visualize results.
 
+## Cohort requirements
+Cohort counts must be in **5-year age bands** (e.g., 40–44, 45–49, …). Incidence may be in broader bands (e.g., 40–54, 55–69); the function maps those to single years internally. Open-ended bands (e.g., 85+) are supported and extended to `age_max`.
 
-## What this vignette shows.
-
-How to: (1) prepare a cohort in 5-year age bands, (2) supply sex-specific incidence and mortality rates, (3) run the projection, and (4) interpret/visualize results.
-
-## 2) Cohort requirement (explicit warning)
 
 ## Step 1. Create the baseline cohort
 
@@ -39,7 +35,7 @@ Each age band must represent a **5-year range** (e.g., “40–44”, “45–49
 The function assumes equally spaced 5-year intervals for age expansion.  
 
 
-```{r cohort}
+```{r cohort, message=FALSE, warning=FALSE}
 counts_5y <- tibble::tibble(
   age_band = c("40-44","45-49","50-54","55-59"),
   N        = c(2694, 3480, 4166, 4964)
@@ -59,42 +55,36 @@ Note that while the cohort (counts_5y) must always use 5-year age intervals (e.g
 the incidence tables may use broader age groups (e.g., “40–54”).
 The function automatically splits these wider bands into matching 5-year intervals internally for calculation.
 
-```{r rates, message=FALSE}
-library(expectedCases)
-library(tibble)
-
-
+```{r rates, message=FALSE, warning=FALSE}
 # Sex proportions
 female_share <- 0.6
 male_share   <- 0.4
 
 # Incidence and mortality rates per 100k (simplified integers)
+# IMPORTANT: Include an open-ended "85+" band so coverage reaches age_max (e.g., 100)
+
 female_inc_wide <- tibble(
-  band = c("40-54", "55-69", "70-85"),
-  rate_per100k = c(39, 102, 278)
+  band = c("40-54", "55-69", "70-84", "85+"),
+  rate_per100k = c(39, 102, 278, 400)  # last value is illustrative; use your preferred rate
 )
-female_inc_wide
 
 female_mort_5y <- tibble(
   band = c("40-44","45-49","50-54","55-59","60-64","65-69","70-74","75-79","80-84","85+"),
   rate_per100k = c(87, 138, 214, 309, 455, 707, 1164, 2104, 4133, 13700)
 )
-female_mort_5y
 
 male_inc_wide <- tibble(
-  band = c("40-54","55-69","70-85"),
-  rate_per100k = c(45, 148, 338)
+  band = c("40-54","55-69","70-84","85+"),
+  rate_per100k = c(45, 148, 338, 500)  # last value is illustrative; use your preferred rate
 )
-male_inc_wide
 
 male_mort_5y <- tibble(
   band = c("40-44","45-49","50-54","55-59","60-64","65-69","70-74","75-79","80-84","85+"),
   rate_per100k = c(155, 225, 337, 506, 789, 1190, 1888, 3239, 5974, 15415)
 )
-male_mort_5y
 ```
 
-
+**Validation:** Age bands must be digits only (`NN-NN` or `NN+`). Typos like `4o-44` (letter **o**) are rejected with a clear error. Rates must cover **every** age in `age_min:age_max` exactly once (no gaps/overlaps).
 
 
 
@@ -107,7 +97,7 @@ male_mort_5y
 | `counts_5y` | `tibble` | Baseline cohort counts by **5-year age bands** (e.g., "40-44", "45-49"), with one column `age_band` and one column `N` (population size). |
 | `female_share` | `numeric` | Proportion of the total cohort that is female (between 0 and 1). |
 | `male_share` | `numeric` | Proportion of the total cohort that is male (between 0 and 1). Must satisfy `female_share + male_share = 1`. |
-| `female_inc_wide` | `tibble` | Female **incidence rates** per 100,000 population, specified in broader age bands (e.g., "40-54", "55-69", "70-85"). The function interpolates these to 5-year intervals internally. |
+| `female_inc_wide` | `tibble` | Female **incidence rates** per 100,000 population, specified in broader age bands (e.g., "40-54", "55-69", "70-85"). The function maps these broader age bands to single-year values internally, assuming flat rates within each band. |
 | `female_mort_5y` | `tibble` | Female **all-cause mortality rates** per 100,000 population, given in 5-year bands (e.g., "40-44", "45-49", …, "85+"). |
 | `male_inc_wide` | `tibble` | Male incidence rates per 100,000 population, formatted like `female_inc_wide`. |
 | `male_mort_5y` | `tibble` | Male all-cause mortality rates per 100,000 population, formatted like `female_mort_5y`. |
@@ -132,21 +122,24 @@ The function returns a **list** with two tibbles:
 | `projection_tbl` | Detailed year-by-year projection showing `alive_start`, `new_cases_year`, `deaths_year`, `aged_out_year`, `alive_end`, and `cum_cases`. |
 
 
-```{r run-projection}
-result <- run_cancer_projection(
+```{r run-projection, message=FALSE, warning=FALSE}
+res <- run_cancer_projection(
   counts_5y,
-  female_share, male_share,
+  female_share = female_share, male_share = male_share,
   female_inc_wide, female_mort_5y,
   male_inc_wide,   male_mort_5y,
   study_start = 2020, study_end = 2025,
   age_min = 40, age_max = 100,
   end_year = 2040,
+  diag_years = 2022:2040,
   print_markdown = FALSE
 )
+
+projection_tbl <- res$projection_tbl
+summary_tbl    <- res$summary_tbl
 ```
 
-
-
+Before interpreting results, it may help to understand the model structure used internally by `expectedCases`.
 
 ## Statistical Framework
 
@@ -180,14 +173,14 @@ where:
 
 ### Continuous-Time Analogy
 
-In continuous time, the discrete recursion approximates the differential equation:
+In continuous time, the discrete recursion discretizes the continuous-time hazard formulation, which represents competing risks between cancer incidence and mortality.
 
 \[
 \frac{dN_{a,s}(t)}{dt} = -N_{a,s}(t) \times (\lambda_{a,s}(t) + \mu_{a,s}(t)).
 \]
 
 which represents competing risks between cancer incidence and mortality.  
-In the discrete (annual) version used here, the yearly transition is approximated as:
+In the discrete (annual) version used here, the yearly transition follows:
 
 \[
 N_{a+1,s,t+1} \approx N_{a,s,t} \times [1 - (\lambda_{a,s,t} + \mu_{a,s,t})].
@@ -200,23 +193,22 @@ N_{a+1,s,t+1} \approx N_{a,s,t} \times [1 - (\lambda_{a,s,t} + \mu_{a,s,t})].
 The output includes:
 
 * `summary_tbl`: summarized expected cases by sex and projection period
-* `yearly_tbl`: detailed year-by-year estimates (alive, new cases, deaths, cumulative cases)
+* `projection_tbl`: detailed year-by-year estimates (alive, new cases, deaths, cumulative cases)
 
-```{r view-yearly}
+```{r view-yearly, message=FALSE, warning=FALSE}
+knitr::kable(summary_tbl, caption = "Expected cases by sex and period")
 
-result$summary_tbl
+projection_tbl |>
+  dplyr::select(Sex, year, alive_start, new_cases_year, deaths_year, aged_out_year, alive_end, cum_cases) |>
+  dplyr::mutate(dplyr::across(where(is.double), ~ round(.x, 1))) |>
+  knitr::kable(caption = "Year-by-year projection (rounded for display)")
 
-result$projection_tbl
 ```
 
 
 
-```{r explanation, echo=FALSE}
+```{r explanation, echo=FALSE,  message=FALSE, warning=FALSE}
 
-result$projection_tbl |>
-  dplyr::select(Sex, year, alive_start, new_cases_year, deaths_year, aged_out_year, alive_end, cum_cases) |>
-  dplyr::mutate(dplyr::across(where(is.double), ~ round(.x, 1))) |>
-  knitr::kable(caption = "Projection")
   
 
 knitr::kable(
@@ -234,39 +226,28 @@ knitr::kable(
       "Cumulative expected cancer cases up to and including that year."
     )
   ),
-  caption = "Description of projection table columns in `result$projection_tbl`."
+  caption = "Description of projection table columns in `projection_tbl`."
 )
 ```
 
----
+
 
   
 ## Step 5. Visualize trends
 
 We can plot the expected cumulative cases over time by sex.
 
-```{r plot, fig.width=5, fig.height=3.2, dpi=200}
-library(ggplot2)
-
-ggplot(result$projection_tbl, aes(x = year, y = new_cases_year, color = Sex)) +
+```{r plot, fig.width=5, fig.height=3.2, dpi=200,  message=FALSE, warning=FALSE}
+ggplot(projection_tbl, aes(year, cum_cases, color = Sex)) +
   geom_line(linewidth = 0.9) +
-  scale_color_manual(values = c("Female" = "#E16A86", "Male" = "#2E86AB")) +  # soft pink & teal-blue
-  labs(
-    title = "Expected New Cancer Cases (2022–2040)",
-    x = "Year",
-    y = "Expected Cases"
-  ) +
-  theme_minimal(base_size = 10) +  # smaller text
+  labs(title = "Expected Cumulative Cancer Cases", x = "Year", y = "") +
+  theme_minimal(base_size = 10) +
   theme(
-    legend.position = "bottom",    # legend below for balance
+    legend.position = "bottom",
     legend.title = element_blank(),
-    axis.text = element_text(color = "gray20"),
-    plot.title = element_text(face = "bold", size = 11, hjust = 0.5),
     panel.grid.minor = element_blank()
   )
 ```
-
-
 
 
 ## Help
